1.3
Books with audio are marked with a speaker icon.
Better video support.
Various minor enhancements and fixes.

1.2
Play "motion books" as videos in landscape orientation.
Play sign language videos.
"Find Bloom books on this device" feature.
Read books directly from your SD card with a BloomExternal directory at the SD card root.
Chinese, Spanish, Hindi, and Bengali user interfaces.
Various minor enhancements and fixes.

1.1
Pan and zoom images along with audio narration and background music.

1.0
Use WiFi or USB to publish a book from the Bloom program on a laptop to this app.
Share books with other devices.
Play audio books.
French user interface.

Future releases will include the ability to get books from bloomlibrary.org.