@@ -1,0 +1,74 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--Generated by crowdin.com-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">د بلوم لوستونکی</string>
+    <string name="delete">ړنګول</string>
+    <string name="deleteConfirmation">له وسیلې حذف کړئ؟</string>
+    <!-- %1$s is a book title -->
+    <string name="deleteExplanationBook">%1$s به ستاسو له وسیله څخه ورک شي.</string>
+    <!-- %1$s is the name of the shelf -->
+    <string name="deleteExplanationEmptyShelf">د%1$s له مخکي جوړ شوې کتابونه به ستاسو له وسیله ورک شي.</string>
+    <!-- %1$d is the number of books and shelves to be deleted; %2$s is the name of the shelf -->
+    <string name="deleteExplanationShelf">د%2$s له مخکي جوړ شوې کتابونو کې ټول %1$d ه مخکي جوړ شوې کتابونه به ستاسو د وسیلې څخه ورک شي.</string>
+    <string name="deleteConfirmButton">اوس ړنګ کړئ</string>
+    <string name="share">شریک کړئ</string>
+    <!-- %1$s is a book title -->
+    <string name="shareBook">شریکول %1$s</string>
+    <string name="cancel">لغوه کول</string>
+    <string name="ok">سمه ده</string>
+    <string name="action_settings">امستنې (تنظیمات)</string>
+    <string name="navigation_drawer_open">د انځورګري لارښود خلاصول</string>
+    <string name="navigation_drawer_close">د انځورګري لارښودبندول</string>
+    <string name="get_books_local_wifi">له بلوم څخه په کمپیوټر کې د وای فای څخه کتابونه ترلاسه کړئ</string>
+    <!-- %1$s is a book title -->
+    <string name="already_have_version">\"%1$s\" وموندل شو ، دمخه لا دا نسخه لري.</string>
+    <!-- %1$s is a book title; %2$s is a description of the sending network -->
+    <string name="found_new_version">د \"%2$s\" نه \"%1$s\" نوې نسخه وموندله ، غوښتنه یې کوي…</string>
+    <!-- %1$s is a book title; %2$s is a description of the sending network -->
+    <string name="found_file">د \"٪2$s\" څخه \"٪1$s\" وموندل شو، غوښتنه یې کوي…</string>
+    <!-- As in, Done receiving a file-->
+    <string name="done">وشو.</string>
+    <string name="transferFailed">کومه تیروتنه وشوه. که سرچینه لاهم شتون ولري ، موږ به ژر هڅه وکړو.</string>
+    <string name="downloading">کښته کول…</string>
+    <!-- %1$s is a description of the sending network -->
+    <string name="looking_for_adds">په وائی فای شبکه %1s کې د کتاب اعلاناتو په لټه کې یاست…</string>
+    <string name="device_hotspot">انترنیت سره د وصل وسیله</string>
+    <string name="no_wifi_connected">وسیله داسې نه بریښي چې د وای فای شبکې سره وصل وي.</string>
+    <string name="failed_book_import">د کتاب واردول ونشول.</string>
+    <string name="external_storage_unavailable">د فایل ذخیري ته لاسرسی نلرو. ایا SD کارت ورک دی?</string>
+    <string name="share_app_link">&lt;u&gt; لینک شریک کړئ ترڅو په ګوګل Play کې د بلوم ریډر ترلاسه کړئ &lt;/ u&gt;</string>
+    <string name="share_app_with_friend">د بلوم ریډر برنامه د ملګرو سره شریک کړئ!</string>
+    <string name="share_books_with_friend">خپل ټول کتابونه د ملګري سره شریک کړئ چا چې دمخه بلوم ریډر نصب کړی دی.</string>
+    <string name="share_app_via">اپلیکیشن شریک کول د</string>
+    <string name="share_link_via">لینک شریک کول د</string>
+    <string name="share_books_via">کتاب شریک کول د</string>
+    <!-- %1$s is the app name (defined by app_name) -->
+    <string name="recommend_app">د بلوم کتابونه د %1$s اپلکیشن سره ولولئ:</string>
+    <string name="failed_to_share_apk">د اپلکیشن فایل شریکولو کې ناکام شو.</string>
+    <string name="failed_to_share_books">د کتابونو شریکولو کې ناکام شو</string>
+    <string name="failed_to_open_book">د کتاب د خلاصولو توان نلري</string>
+    <!-- %1$s is a book title -->
+    <string name="missing_book">%1$s ورک دی. دا ممکن په ایس ډي کارت کې وي چې لرې شوی وي ، یا دا حذف شوی وي.</string>
+    <string name="device_storage_is_full">د کتاب د خلاصولو توان نلري. د وسیلې ذخیره ډکه ده. یو څه ځای خالي کړئ او بیا هڅه وکړئ.</string>
+    <!-- %1$s is the name of a book or shelf being added from a bloombundle -->
+    <string name="adding_book">د %1$s اضافه کول...</string>
+    <string name="bundle_import_out_of_space">په دې بنډل کې د ټولو کتابونو لپاره په آله کې کافي ځای ندی.</string>
+    <string name="bundle_import_error">د بلوم بنډل لوستلو کې ستونزه وه.</string>
+    <string name="share_app">د بلوم ریډر اپلیکشن شریک کړئ</string>
+    <string name="share_books">کتابونه شریک کړئ</string>
+    <string name="find_books_on_device">پدې وسیله د بلوم کتابونه ومومئ</string>
+    <string name="searching">لټول...</string>
+    <string name="no_books_added">په وسیله کې د بلوم نوي کتابونه یا بنډلونه ونه موندل شول.</string>
+    <string name="release_notes">یادښتونه خپاره کړئ</string>
+    <string name="about_bloom_reader">د بلوم ریډر په اړه</string>
+    <string name="about_bloom">د بلوم په اړه</string>
+    <string name="about_sil">د SIL په اړه</string>
+    <string name="or">یا</string>
+    <string name="check_comprehension">خپل پوهاوی چیک کړئ</string>
+    <!-- %1$d and %2$d are numbers; for example: Question 1 of 2  -->
+    <string name="question_n_of_m">پوښتنه %2$d د %1$d</string>
+    <string name="receive_books_over_wifi">له کمپیوټر څخه کتابونه ترلاسه کول</string>
+    <string name="need_storage_permission">بلوم ریډر د کار کولو لپاره د فایل ذخیره کولو ته لاسرسی ته اړتیا لري.</string>
+    <string name="grant_storage_permission">د زېرمه کولو اجازه ورکړه</string>
+    <string name="renaming_invalid_book">%1$s ته د ناسم کتاب نوم بدلول</string>
+</resources>
