@@ -1,0 +1,74 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--Generated by crowdin.com-->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">كتاب بلوم</string>
+    <string name="delete">حذف</string>
+    <string name="deleteConfirmation">حذف از وسیله?</string>
+    <!-- %1$s is a book title -->
+    <string name="deleteExplanationBook">%1$s از آله شما گم خواهد شد.</string>
+    <!-- %1$s is the name of the shelf -->
+    <string name="deleteExplanationEmptyShelf">کتاب از قبل تهیه شده %1$s از کامپیوتر شما ناپدید می شود.</string>
+    <!-- %1$d is the number of books and shelves to be deleted; %2$s is the name of the shelf -->
+    <string name="deleteExplanationShelf">همه %1$d کتاب ها و کتاب ها کوچک از کتاب از قبل تهیه شده %2$s در کامپیوتر شما ناپدید می شوند.</string>
+    <string name="deleteConfirmButton">فعلا حذف کنید</string>
+    <string name="share">بخش کردن</string>
+    <!-- %1$s is a book title -->
+    <string name="shareBook">%1$s به اشتراک بگذارید</string>
+    <string name="cancel">فسخ</string>
+    <string name="ok">درست</string>
+    <string name="action_settings">تنظیمات</string>
+    <string name="navigation_drawer_open">بخش جهت یاب را باز کنید</string>
+    <string name="navigation_drawer_close">بخش جهت یاب را بند کنید</string>
+    <string name="get_books_local_wifi">کتاب ها را از بلوم در یک کمپیوتر ، از طریق Wifi دریابید</string>
+    <!-- %1$s is a book title -->
+    <string name="already_have_version">\"%1$s\" یافت شد ، این نسخه را از قبل دارید.</string>
+    <!-- %1$s is a book title; %2$s is a description of the sending network -->
+    <string name="found_new_version">نسخه جدید \"%1$s\" را از \"%2$s\" یافتید ، درخواست کننده…</string>
+    <!-- %1$s is a book title; %2$s is a description of the sending network -->
+    <string name="found_file">\"%1$s\" را از \"%2$s\" یافتید ، درخواست کننده…</string>
+    <!-- As in, Done receiving a file-->
+    <string name="done">انجام شده.</string>
+    <string name="transferFailed">مشکل پیش آمد. اگر منبع هنوز در دسترس است ، به زودی دوباره سعی خواهیم کرد.</string>
+    <string name="downloading">در حال پاین آوردن…</string>
+    <!-- %1$s is a description of the sending network -->
+    <string name="looking_for_adds">در جستجوی تبلیغات کتاب در شبکه WiFi%1s…</string>
+    <string name="device_hotspot">وسیله اتصال ( Hotspot) انترنیتی</string>
+    <string name="no_wifi_connected">به نظر نمی رسد که این وسیله به یک شبکه WiFi وصل باشد.</string>
+    <string name="failed_book_import">پاین آوردن کتاب انجام نشد.</string>
+    <string name="external_storage_unavailable">دسترسی به حافظه فایل امکان پذیر نیست. آیا کارت SD از گم شده است?</string>
+    <string name="share_app_link"><u> برای دریافت Bloom Reader در Google Play آدرس را به اشتراک بگذارید </u></string>
+    <string name="share_app_with_friend">این برنامه Bloom Reader را با یک دوست تان به اشتراک بگذارید!</string>
+    <string name="share_books_with_friend">تمام کتاب های خود را با یک دوست تان که در حال حاضر Bloom Reader را نصب کرده است به اشتراک بگذارید.</string>
+    <string name="share_app_via">شریک کردن برنامه از طریق</string>
+    <string name="share_link_via">از طریق آدرس به اشتراک بگذارید</string>
+    <string name="share_books_via">شریک ساختن کتاب ها از طریق</string>
+    <!-- %1$s is the app name (defined by app_name) -->
+    <string name="recommend_app">کتاب های بلوم را با برنامه%1$s بخوانید:</string>
+    <string name="failed_to_share_apk">شریک ساختن فایل برنامه ناکام شد.</string>
+    <string name="failed_to_share_books">شریک ساختن کتاب ها ناکام شد</string>
+    <string name="failed_to_open_book">باز کردن کتاب امکان پذیر نیست</string>
+    <!-- %1$s is a book title -->
+    <string name="missing_book">٪ 1 $ s وجود ندارد. ممکن است در کارت sd باشد که دور شده، یا ممکن است حذف شده باشد.</string>
+    <string name="device_storage_is_full">باز کردن کتاب نا ممکن است. حافظه وسیله پر است. کمی حافظه را خالی کنید و دوباره امتحان کنید.</string>
+    <!-- %1$s is the name of a book or shelf being added from a bloombundle -->
+    <string name="adding_book">در حال افزایش%1$s...</string>
+    <string name="bundle_import_out_of_space">جای کافی در وسیله برای تمام کتاب های موجود در این بسته وجود ندارد.</string>
+    <string name="bundle_import_error">در هنگام خواندن بسته بلوم مشکل وجود داشت.</string>
+    <string name="share_app">برنامه Bloom Reader را به اشتراک بگذارید</string>
+    <string name="share_books">کتاب ها را به اشتراک بگزارید</string>
+    <string name="find_books_on_device">کتاب های بلوم را در این وسیله پیدا کنید</string>
+    <string name="searching">جستجوکردن...</string>
+    <string name="no_books_added">هیچ کتاب ها یا بسته های جدید بلوم در وسیله یافت نشد.</string>
+    <string name="release_notes">یاد داشت های منتشر شده</string>
+    <string name="about_bloom_reader">درباره Bloom Reader</string>
+    <string name="about_bloom">درباره بلوم</string>
+    <string name="about_sil">درباره SIL</string>
+    <string name="or">یا اینکه</string>
+    <string name="check_comprehension">درک خود را بررسی کنید</string>
+    <!-- %1$d and %2$d are numbers; for example: Question 1 of 2  -->
+    <string name="question_n_of_m">سؤال %1$d از %2$d</string>
+    <string name="receive_books_over_wifi">بدست اوردن کتاب از کمپیوتر</string>
+    <string name="need_storage_permission">Bloom Reader برای کار دسترسی به حافظه فایل نیاز دارد.</string>
+    <string name="grant_storage_permission">به ذخیره نمودن اجاز دهید</string>
+    <string name="renaming_invalid_book">تغییر نام کتاب بی باوره به%1$s</string>
+</resources>
