@@ -1,6 +1,7 @@
 1.3
 Books with audio are marked with a speaker icon.
 Better video support.
+Dari and Northern Pashto user interfaces.
 Various minor enhancements and fixes.
 
 1.2
